# BELUGA-FW

./: CMakeLists.txt  Makefile  README.md  docmake.sh
drivers/: bno055.c  bno055.h  bno055_c  bno055_support.cpp  lps22hb_reg.c  lps22hb_reg.h  sht40_driver_cpp.cpp  sht40_driver_cpp_again.cpp  tmp117_reg.c
include/: apisqueen_pwm.h  hardware_config.h  imu.cpp  imu.h  init.h  lps22hb.h  lps22hb_reg.h  sensor.h  sht40.h  tmp117.h
src/: init.cpp  main.cpp  motor_control.cpp
